sample-redis-app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisapp
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:4-32bit
        resources:
          requests:
            cpu: 200m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redisapp
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realtimeapp
  labels:
    app: realtimeapp
spec:
  selector:
    matchLabels:
      app: realtimeapp
  replicas: 1
  template:
    metadata:
      labels:
        app: realtimeapp
    spec:
      containers:
      - name: realtimeapp
        image: gbaeke/fluxapp:1.0.0
        livenessProbe:
          httpGet:
            path: /index.html
            port: 8080
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8080
        resources:
          requests:
            cpu: 25m
            memory: 50Mi
          limits:
            cpu: 150m
            memory: 150Mi
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: realtimeapp
  labels:
    app: realtimeapp
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: realtimeapp
    
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realtimeapp-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true"
    # appgw.ingress.kubernetes.io/appgw-ssl-certificate: "origin"
    appgw.ingress.kubernetes.io/backend-protocol: "http"

spec:
  rules:
  # - host: HOSTNAME
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: realtimeapp
            port:
              number: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: redisclipod
  labels:
    app: rediscli
spec:
  containers:
  - name: rediscli
    image: goodsmileduck/redis-cli
    command: ['sh', '-c', 'while true;do redis-cli -h redisapp publish device01 "Hello at $(date +%r)";sleep 1;done']
